# networking-cisco

./: .gitignore  MANIFEST.in  branch-TODO.md  marga.txt  requirements.txt  setup.cfg  tox.ini
debian/: changelog.in  control  copyright  neutron-networking-cisco.install
devstack/: plugin.sh
devstack/csr1kv/: cisco_neutron  cisco_router  csr1kv_install_all.sh  setup_keystone_for_csr1kv_l3.sh  setup_neutron_for_csr1kv_l3.sh  setup_nova_and_glance_for_csr1kv_l3.sh
devstack/inject_files/: cisco_device_manager_plugin.inject  cisco_router_plugin.inject
etc/neutron/plugins/cisco/: cisco_cfg_agent.ini  cisco_router_plugin.ini
etc/neutron/plugins/ml2/: ml2_conf_cisco.ini
networking_cisco/db/migration/: cli.py
networking_cisco/db/migration/alembic_migrations/: env.py
networking_cisco/plugins/cisco/cpnr/: .testr.conf  PKG-INFO  TESTING.rst  check.sh  cpnr_client.py  debug_stats.py  dhcp_driver.py  dhcp_relay.py  dhcpopts.py  dns_relay.py  model.py  netns.py  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
networking_cisco/plugins/cisco/cpnr/tests/unit/: test_dhcp_relay.py  test_dns_relay.py  test_model.py
networking_cisco/plugins/cisco/cpnr/tests/unit/data/: dns_req_edns0.txt  ip_addr_show.txt
networking_cisco/plugins/cisco/cpnr/tools/: apply_pnr_patch.sh
networking_cisco/services/l3_router/: l3_cisco_nexus.py
networking_cisco/tests/: base.py
networking_odl/common/: constants.py  filters.py  journal.py
networking_odl/db/: db.py  models.py
networking_odl/ml2/: mech_driver_v2.py
tools/: tox_install.sh
(+81 files in other folders)
