[metadata]
name = Cisco PNR DHCP/DNS Driver and Relay Processes
summary = Cisco PNR DHCP/DNS Driver and Relay Processes
author = Vikram Hosakote
author-email = vhosakot@cisco.com
home-page = http://www.cisco.com/
classifier =
        Environment :: OpenStack
        Intended Audience :: Information Technology
        Intended Audience :: System Administrators
        License :: OSI Approved :: Apache Software License
        Operating System :: POSIX :: Linux
        Programming Language :: Python
        Programming Language :: Python :: 2
        Programming Language :: Python :: 2.7
        Programming Language :: Python :: 2.6

[entry_points]
console_scripts =
        neutron-dhcp-relay = neutron.plugins.cisco.cpnr.dhcp_relay:main
        neutron-dns-relay  = neutron.plugins.cisco.cpnr.dns_relay:main

[global]
setup-hooks =
        pbr.hooks.setup_hook
